# cursor-anxious

./: Cargo.toml  LICENSE  README.md  anxious-scroll-daemon.service  install.sh  uninstall.sh
.github/workflows/: rust.yml
benches/: benchmarks.rs
exp_lut_macro/: Cargo.toml
exp_lut_macro/src/: lib.rs
src/: lib.rs  main.rs
