[package]
name = "mouse-scroll-daemon"
version = "0.1.0"
edition = "2024"
authors = ["Snehal Koukuntla <snehalreddyk@gmail.com>"]
description = "Userspace scroll wheel daemon using evdev/uinput"

[dependencies]
evdev = "0.13"
nix = "0.30.1"
clap = { version = "4.5.50", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.8"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "anxious-scroll-daemon"
path = "src/main.rs"
